client/src/styles/VehiclesInfosList.css
.vehicles-info-container {
  background-color: var(--beige-color);
  padding: 2rem 1.5rem;
  border-radius: 1rem;
  overflow-y: auto;
  height: 80%;
}

@media screen and (width > 1000px) {
  .vehicles-info-container {
    padding: 2.4rem 3rem;
  }
}

.vehicles-infos-header {
  display: flex;
  color: var(--chicago-color-700);
  width: 100%;
  justify-content: space-between;
}

.add-vehicle-button {
  background-color: var(--keppel-color-600);
  border: none;
  color: var(--ghost-white-color);
  padding: 0.5rem;
  border-radius: 0.5rem;
  cursor: pointer;
}

@media screen and (width > 1000px) {
  .vehicles-infos-header h1 {
    font-size: 1.7rem;
  }

  .add-vehicle-button {
    padding: 1rem;
  }
}

.grid-car-infos-cards {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  margin-top: 2rem;
}

@media screen and (width > 1100px) {
  .grid-car-infos-cards {
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    gap: 2rem 3rem;
  }
}

